docs/docusaurus/versions/version-4.5.0/en-US/source/3.quick-start/1.preparation.md
# Quick Start

> This document is intended for new users to get started quickly and contains an introduction, features, installation, and use of TuGraph.

## 1.Introduction

TuGraph is a large-scale graph computing system independently developed by Ant Group, providing graph database engine and graph analysis engine. Its main features are large data storage and computation, high throughput, and flexible API, while supporting efficient online transaction processing (OLTP) and online analytical processing (OLAP). LightGraph and GeaGraph are former names of TuGraph.

The main functional features include:

- Labeled property Graph Model
- Support multiple Graphs
- Full ACID transaction processing
- Built-in 34 graph analysis algorithm
- Graph visualization tool based on Web client
- RESTful API and RPC are supported
- OpenCypher graph query language
- Stored procedure based on C++/Python/Java
- The Traversal API for efficient graph algorithm development

Performance and scalability features include:

- TB large capacity
- High throughput of ten million vertices per second
- High Availability Support (Enterprise Edition)
- High-performance Batch Import
- Online/offline backup

### 1.1.Supported Platforms

TuGraph supports both X86_64 and ARM64 architectures in physical, virtual, and containerized environments.

### 1.2.Hardware requirements

_You are advised to use NVMe SSDS with large memory configurations for optimal performance。_

| Hardware | Minimum Configuration | Recommended configuration |
|----------|-----------------------|---------------------------|
| CPU      | X86_64                | Xeon E5 2670 v4           |
| Memory   | 4GB                   | 256GB                     |
| Disk     | 100GB                 | 1TB NVMe SSD              |
| System   | Linux 2.6             | Ubuntu 18.04, CentOS 7.3  |

## 2.Installation

TuGraph can be installed quickly via Docker Image or locally via RPM /deb packages.In addition, TuGraph offers community edition services on Alibaba Cloud Computing Nest, which means you don't need to purchase your own cloud host to quickly deploy TuGraph services and achieve operational monitoring, thus building your own graph application.

> Installation package/image download: refer to the TuGraph-Latest-Version section in [Download address](../1.guide.md).

> Computing Nest Deployment: You can search for it on Alibaba Cloud Computing Nest, or you can quickly access it through [deployment link] (../5.developer-manual/1.installation/5.cloud-deployment.md).

### 2.1.Fast experience through Docker

1. The Docker environment installed locally

   The docker official documentation：https://docs.docker.com/get-started/

2. Pull the docker images

   ```shell
   docker pull tugraph/tugraph-runtime-centos7
   ```

3. Start docker

   ```shell
    docker run -d -p 7070:7070  -p 7687:7687 -p 9090:9090 -v /root/tugraph/data:/var/lib/lgraph/data  -v /root/tugraph/log:/var/log/lgraph_log \
    --name tugraph_demo reg.docker.alibaba-inc.com/fma/tugraph-runtime-centos7:${VERSION}
   
   # 7070  is default http port，for tugraph-db-browser accessing..
   # 7687 is bolt port, for neo4j client accessing.
   # 9090 is default RPC port，for RPC client accessing.
   
   # The default data directory is /var/lib/lgraph/data and the default log directory is /var/log/lgraph_log,
   # which is configured in the tugraph configuration file at /usr/local/etc/lgraph.json inside the docker.
   # This command mounts the data directory and log directory to /root/tugraph/ on the host for persistence,
   # which you can modify according to your actual situation.
   ```
4. Open by browser

Accessing tugraph-db-browser: `http://x.x.x.x:7070`. The database address format is `bolt://ip:bolt_port`,Default account is `admin` and default password is `73@TuGraph`.
The page will be redirected to the password modification page for the first login. Please modify the password according to the page prompt.

### 2.2.Description of New and Old Front-ends.

To access the container and choose between the old and new versions of the frontend, modify the configuration file located at "/usr/local/etc/lgraph.json". For the old version, change the value of the "web" parameter to "/usr/local/share/lgraph/resource"; for the new version, set it to "/usr/local/share/lgraph/browser-resource". Once you've finished editing the configuration file, run the command  `docker restart tugraph` to apply the changes. Bear in mind that the new version is the default selection.